--- a/templates/_header.html
+++ b/templates/_header.html
@@ -24,6 +24,9 @@
                     <a href="#" class="navigation__link">Контакты</a>
                 </li>
             </ul>
+            <a href="#" class="burger js-menu-toggle">
+                <span class="burger-span"></span>
+            </a>
         </nav>
     </div>
 </header>
