--- a/templates/_scripts.html
+++ b/templates/_scripts.html
@@ -9,4 +9,7 @@
 <script src="components/jquery/jquery.min.js" type="text/javascript"></script>
 <script src="components/custom-select/chosen.jquery.min.js" type="text/javascript"></script>
 <script src="components/custom-tooltips/tipso.min.js" type="text/javascript"></script>
+<script src="components/grayscale/jquery.gray.min.js" type="text/javascript"></script>
+<script src="components/grayscale/blur.js" type="text/javascript"></script>
+<script src="components/swipe-lib/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
