--- a/templates/_aside.html
+++ b/templates/_aside.html
@@ -71,7 +71,7 @@
                                 </g>
                             </svg>
                         </div>
-                        <span class="action__value">Моё избранное</span>
+                        <span class="action__value">Мои уведомления</span>
 
                         <!-- Begin notification-value -->
                         <div class="notification-value js-little-popup">
@@ -134,7 +134,7 @@
                     </div>
                     <div class="input-group">
                         <select class="custom-it search-field first-option-selected">
-                            <option value="Выберите цех" selected>Выберите цех</option>
+                            <option value="Выберите специализацию" selected>Выберите специализацию</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -241,7 +241,7 @@
                             </div>
                             <!-- End checkbox-group -->
                         </div>
-                        <a href="#" class="js-extended-search simple-link">Рассширенный поиск</a>
+                        <a href="#" class="js-extended-search simple-link">Расширенный поиск</a>
                     </div>
                     <!-- End additional-group -->
                     <input type="submit" class="button button--transparent-yellow" value="Искать">
