--- a/templates/_head.html
+++ b/templates/_head.html
@@ -17,6 +17,7 @@
     <link href="favicon.ico" rel="icon" type="image/vnd.microsoft.icon"> -->
     <link rel="stylesheet" href="components/custom-tooltips/tipso.min.css"/>
     <link rel="stylesheet" href="components/custom-select/chosen.css"/>
+    <link rel="stylesheet" href="components/popupbox/source/jquery.fancybox.css"/>
     <link rel="stylesheet" href="assets/css/styles.css"/>
 
     <script type="text/javascript">
