--- a/templates/_header.html
+++ b/templates/_header.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <!-- Begin header__logo -->
         <div class="header__logo">
-            <a href="#" class="cinemalist-logotype">Cinemailist</a>
+            <a href="#" class="cinemalist-logotype">Cinemalist</a>
         </div>
         <!-- End header__logo -->
         <nav class="header__nav">
