--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -104,5 +104,142 @@
         </div>
         <!-- End footer__additional -->
     </div>
+    <div class="popup_windows">
+        <figure class="popup" id="login-form">
+            <div class="popup-title">
+                <p>Вход</p>
+            </div>
+            <div class="popup-form">
+                <form method="POST" action="/">
+                    <div class="input-group">
+                        <input type="text" placeholder="E-mail">
+                        <input type="password" placeholder="Пароль">
+                    </div>
+                    <div class="input-buttons half-group">
+                        <input type="submit" value="Войти" class="button button--black">
+                        <a href="#password-recovery" class="simple-link link--dark popup-call">Забыли пароль?</a>
+                    </div>
+                </form>
+                <div class="popup-footer">
+                    <p>Впервые на сайте? <a href="#registration-form" class="popup-call">Быстрая регистрация</a></p>
+                </div>
+            </div>
+        </figure>
+        <figure class="popup" id="password-recovery">
+            <div class="popup-title">
+                <p>Восстановление пароля</p>
+            </div>
+            <div class="popup-subtitle">
+                <p>Пожалуйста, укажите e-mail, который Вы использовали для входа на сайт. На него вам будет отправлено
+                    письмо для восстановления пароля.</p>
+            </div>
+            <div class="popup-subtitle error">
+                <p>К сожалению, данного e-mail нет в нашей базе, возможно вы допустили ошибку или попробуйте ввести
+                    другой e-mail</p>
+            </div>
+            <div class="popup-form">
+                <form method="POST" action="/">
+                    <div class="input-group">
+                        <input type="text" placeholder="E-mail">
+                    </div>
+                    <div class="input-buttons half-group">
+                        <input type="submit" value="Далее" class="button button--black">
+                        <a href="password-recovery.html" class="simple-link link--dark">Я вспомнил!</a>
+                    </div>
+                </form>
+            </div>
+        </figure>
+        <figure class="popup" id="registration-form">
+            <div class="popup-title">
+                <p>Регистрация</p>
+            </div>
+            <div class="popup-form">
+                <form method="POST" action="/">
+                    <div class="input-group">
+                        <input type="text" placeholder="Имя">
+                        <input type="text" placeholder="Фамилия">
+                        <input type="text" placeholder="E-mail">
+                        <input type="text" placeholder="Инвайт*">
+                        <input type="password" placeholder="Пароль">
+                    </div>
+                    <div class="input-buttons">
+                        <input type="submit" value="Зарегистрироваться" class="button button--black">
+                    </div>
+                </form>
+                <div class="popup-footer">
+                    <p>* вы можете зарегистрироваться без инвайта. Инвайт нужен если вы хотите разместить на сайте свою
+                        анкету. </p>
+                </div>
+            </div>
+        </figure>
+        <figure class="popup" id="moderation-form">
+            <div class="popup-title">
+                <p>Анкета отправлена на модерацию</p>
+            </div>
+            <div class="popup-footer">
+                <p>Спасибо, что разместили анкету на нашем сайте! Сейчас она проходи проверку наших модераторов. По
+                    её завершению вы получите уведомление на e-mail, указанный при регистрации.</p>
+                <p>Сейчас вы будет направлены на вашу страницу, где вы сможете добавить проекты в которых принимали
+                    участие.</p>
+            </div>
+            <div class="popup-buttons half-group">
+                <a href="#" class="button button--black js-popup-close">Далее</a>
+            </div>
+        </figure>
+        <figure class="popup" id="instruction-form">
+            <div class="popup-title">
+                <p>Инструкция отправлена</p>
+            </div>
+            <div class="popup-footer">
+                <p>Мы отправили инструкцию по восстановлению пароля на e-mail, который вы указали. Если в течении 15
+                    минут письмо к вам не пришло, проверьте папку "Спам" в вашей почте, возможно письмо попало туда,
+                    если нет, то нажмите "Отправить повторно".</p>
+            </div>
+            <div class="popup-buttons">
+                <a href="#" class="button button--black">Отправить повторно</a>
+                <a href="#" class="simple-link link--black js-popup-close">Закрыть</a>
+            </div>
+        </figure>
+        <figure class="popup" id="favorite-form">
+            <div class="popup-title">
+                <p>Отправить избранное</p>
+            </div>
+            <div class="popup-subtitle">
+                <p>Введите e-mail на который вы хотите отправить список избранного. Обращаем внимание, что ваши
+                    комментарии к анкетам также будут отправлены. </p>
+            </div>
+            <div class="popup-form">
+                <form method="POST" action="/">
+                    <div class="input-group">
+                        <input type="text" placeholder="E-mail">
+                    </div>
+
+                    <div class="popup-buttons half-group">
+                        <input type="submit" value="Отправить" class="button button--black">
+                        <a href="#" class="simple-link link--black js-popup-close">Отменить</a>
+                    </div>
+                </form>
+            </div>
+        </figure>
+        <figure class="popup popup--extended" id="message-send-form">
+            <div class="popup-title">
+                <p>Отправить сообщение</p>
+            </div>
+            <div class="popup-form">
+                <form method="POST" action="/">
+                    <div class="input-group">
+                        <input type="text" placeholder="Тема сообщения">
+
+                        <textarea name="some-value" placeholder="Текст сообщения"></textarea>
+                    </div>
+
+                    <div class="popup-buttons half-group">
+                        <input type="submit" value="Отправить" class="button button--black">
+                        <a href="#" class="simple-link link--black js-popup-close">Отменить</a>
+                    </div>
+                </form>
+            </div>
+        </figure>
+    </div>
 </footer>
 <!-- End footer -->
