--- a/templates/_scripts.html
+++ b/templates/_scripts.html
@@ -11,5 +11,6 @@
 <script src="components/custom-tooltips/tipso.min.js" type="text/javascript"></script>
 <script src="components/grayscale/jquery.gray.min.js" type="text/javascript"></script>
 <script src="components/grayscale/blur.js" type="text/javascript"></script>
+<script src="components/popupbox/source/jquery.fancybox.js" type="text/javascript"></script>
 <script src="components/swipe-lib/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
