--- a/templates/_scripts.html
+++ b/templates/_scripts.html
@@ -13,4 +13,5 @@
 <script src="components/grayscale/blur.js" type="text/javascript"></script>
 <script src="components/popupbox/source/jquery.fancybox.js" type="text/javascript"></script>
 <script src="components/swipe-lib/jquery.touchSwipe.min.js" type="text/javascript"></script>
+<script src="components/jquery/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
