--- a/templates/_scripts.html
+++ b/templates/_scripts.html
@@ -15,3 +15,4 @@
 <script src="components/swipe-lib/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="components/jquery/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
+<script src="assets/js/_freeze-scrolling.js" type="text/javascript"></script>
