#ADD галлерея + стилизация дефолтной валидации
Добавлено:
+подключение адаптивной галлереи, по пути - components/custom-gallery

+ инициализация галлереи в common.js

+ стили галлереи

+ стили валидации

--- a/templates/_head.html
+++ b/templates/_head.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="components/custom-tooltips/tipso.min.css"/>
     <link rel="stylesheet" href="components/custom-select/chosen.css"/>
     <link rel="stylesheet" href="components/popupbox/source/jquery.fancybox.css"/>
+    <link rel="stylesheet" href="components/custom-gallery/css/lightgallery.min.css"/>
     <link rel="stylesheet" href="assets/css/styles.css"/>
 
     <script type="text/javascript">
