--- a/templates/_scripts.html
+++ b/templates/_scripts.html
@@ -14,5 +14,6 @@
 <script src="components/popupbox/source/jquery.fancybox.js" type="text/javascript"></script>
 <script src="components/swipe-lib/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="components/jquery/jquery.maskedinput.min.js" type="text/javascript"></script>
-<script src="assets/js/common.js" type="text/javascript"></script>
+<script src="components/custom-gallery/js/lightgallery.min.js" type="text/javascript"></script>
 <script src="assets/js/_freeze-scrolling.js" type="text/javascript"></script>
+<script src="assets/js/common.js" type="text/javascript"></script>
